feat: nice callback type 추가