@@ -12,21 +12,17 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 
-import javax.crypto.*;
+import javax.crypto.Cipher;
+import javax.crypto.SecretKey;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
-import java.security.InvalidAlgorithmParameterException;
-import java.security.InvalidKeyException;
-import java.security.NoSuchAlgorithmException;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.Base64;
 
 import static com.drinkhere.drinklymember.common.exception.nice.NiceErrorCode.*;
-
 
 @ApplicationService
 @RequiredArgsConstructor
@@ -37,8 +33,7 @@ public class NiceCallBackUseCase {
     private final MemberQueryService memberQueryService;
     private final OwnerQueryService ownerQueryService;
 
-    private static final String REDIS_CRYPTO_KEY = "cryptoData";
-    private static final String REDIS_REQUEST_NO_KEY_TEMPLATE = "memberId:%d:requestNo";
+    private static final String REDIS_REQUEST_NO_KEY_TEMPLATE = "memberId:%d:type:%s:requestNo";
     private static final String SYMMETRIC_ENCRYPTION_ALGORITHM_AES = "AES";
     private static final String CIPHER_ALGORITHM = "AES/CBC/PKCS5Padding";
 
@@ -50,12 +45,14 @@ public class NiceCallBackUseCase {
         // encData 복호화
         NiceDecryptedData niceDecryptedData = decryptAndParseData(encData, niceCryptoData.key(), niceCryptoData.iv());
 
-        // Redis에서 requestno 조회 후 복호화 결과의 requestno 비교
-        String typeId = id.toString() + type;
-        getRequestNoFromRedisAndValidate(typeId, niceDecryptedData.requestNo());
+        // Redis에서 requestNo 조회 후 비교
+        getRequestNoFromRedisAndValidate(id, type, niceDecryptedData.requestNo());
+
         // 성인 인증 및 DI 값으로 중복 계정 체크
         validateAdult(niceDecryptedData.birthDate());
-        checkDuplicateAccountByDI(niceDecryptedData.di());
+        checkDuplicateAccountByDI(niceDecryptedData.di(), type);
+
+        // 이름 디코딩 (StandardCharsets.UTF_8 사용)
         String decodedName = decodingName(niceDecryptedData.utf8Name());
 
         return GetNiceApiResultResponse.from(id, type, niceDecryptedData, decodedName);
@@ -64,9 +61,9 @@ public class NiceCallBackUseCase {
     /**
      * -----------------------------------METHOD들------------------------------------------
      **/
-    // Redis에서 대칭키 조회 후 역직렬화
+
     private NiceCryptoData getCryptoDataFromRedisAndValidate() {
-        String cryptoDataJson = (String) redisUtil.get(REDIS_CRYPTO_KEY);
+        String cryptoDataJson = (String) redisUtil.get("cryptoData");
 
         if (cryptoDataJson == null) {
             throw new NiceException(CRYPTO_DATA_NOT_FOUND);
@@ -79,11 +76,9 @@ public class NiceCallBackUseCase {
         }
     }
 
-
-    // 복호화 후 객체 반환
     private NiceDecryptedData decryptAndParseData(String encData, String key, String iv) {
         try {
-            String decodedEncData = URLDecoder.decode(encData, StandardCharsets.UTF_8); // URL 디코딩
+            String decodedEncData = URLDecoder.decode(encData, StandardCharsets.UTF_8);
             SecretKey secretKey = new SecretKeySpec(key.getBytes(StandardCharsets.UTF_8), SYMMETRIC_ENCRYPTION_ALGORITHM_AES);
             Cipher cipher = Cipher.getInstance(CIPHER_ALGORITHM);
             cipher.init(Cipher.DECRYPT_MODE, secretKey, new IvParameterSpec(iv.getBytes(StandardCharsets.UTF_8)));
@@ -91,56 +86,40 @@ public class NiceCallBackUseCase {
             byte[] decodedData = Base64.getDecoder().decode(decodedEncData);
             byte[] decryptedData = cipher.doFinal(decodedData);
 
-            String decryptedString = new String(decryptedData, StandardCharsets.UTF_8);
-
-            return objectMapper.readValue(decryptedString, NiceDecryptedData.class);// Deserialization
-        } catch (NoSuchAlgorithmException | NoSuchPaddingException e) {
-            throw new NiceException(INVALID_CIPHER_ALGORITHM);
-        } catch (InvalidKeyException | InvalidAlgorithmParameterException e) {
-            throw new NiceException(INVALID_CIPHER_PARAMETERS);
-        } catch (IllegalBlockSizeException | BadPaddingException e) {
+            return objectMapper.readValue(new String(decryptedData, StandardCharsets.UTF_8), NiceDecryptedData.class);
+        } catch (Exception e) {
             throw new NiceException(CIPHER_DECRYPTION_FAILED);
-        } catch (JsonProcessingException e) {
-            throw new NiceException(DESERIALIZATION_FAILED);
         }
     }
 
-    // requestno 조회 및 검증
-    private String getRequestNoFromRedisAndValidate(String typeId, String niceDecryptedRequestNo) {
+    private void getRequestNoFromRedisAndValidate(Long id, String type, String niceDecryptedRequestNo) {
+        // 🔹 수정된 Redis Key 포맷
+        String requestNoKey = String.format(REDIS_REQUEST_NO_KEY_TEMPLATE, id, type);
+        Object redisData = redisUtil.get(requestNoKey);
 
-        String requestNoKey = String.format(REDIS_REQUEST_NO_KEY_TEMPLATE, typeId);
-        String requestNoFromRedis = (String) redisUtil.get(requestNoKey);
-        if (requestNoFromRedis != null) { // 레디스에 해당 요청번호가 존재하는지
-            if (!niceDecryptedRequestNo.equals(requestNoFromRedis)) { // 요청 번호가 일치하는지
-                throw new NiceException(REQUEST_NO_MISMATCH);
-            }
-        } else {
+        if (redisData == null) {
             throw new NiceException(REQUEST_NO_NOT_FOUND);
         }
 
-        return requestNoFromRedis;
+        String requestNoFromRedis = redisData.toString();
+
+        if (!niceDecryptedRequestNo.equals(requestNoFromRedis)) {
+            throw new NiceException(REQUEST_NO_MISMATCH);
+        }
     }
 
     private void validateAdult(String birthDate) {
-        // 생년월일 파싱 (yyyyMMdd 형식)
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd");
-        LocalDate birthDateLocal = LocalDate.parse(birthDate, formatter);
-
-        // 만 19년이 되는 해의 1월 1일
+        LocalDate birthDateLocal = LocalDate.parse(birthDate, DateTimeFormatter.ofPattern("yyyyMMdd"));
         LocalDate adultStartDate = birthDateLocal.plusYears(19).withDayOfYear(1);
-
-        // 현재 날짜
         LocalDate today = LocalDate.now();
 
-        // 만 19년이 되는 해의 1월 1일이 오늘 날짜 이후라면 예외 발생
         if (today.isBefore(adultStartDate)) {
             throw new NiceException(NOT_AN_ADULT);
         }
     }
 
-    private void checkDuplicateAccountByDI(String di) {
-        // MemberCommandService에서 DI 값으로 회원 조회
-        boolean isDuplicate = memberQueryService.existsByDi(di);
+    private void checkDuplicateAccountByDI(String di, String type) {
+        boolean isDuplicate = "owner".equalsIgnoreCase(type) ? ownerQueryService.existsByDi(di) : memberQueryService.existsByDi(di);
 
         if (isDuplicate) {
             throw new NiceException(DUPLICATE_ACCOUNT);
@@ -149,8 +128,8 @@ public class NiceCallBackUseCase {
 
     private String decodingName(String encodedName) {
         try {
-            return URLDecoder.decode(encodedName, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
+            return URLDecoder.decode(encodedName, StandardCharsets.UTF_8);
+        } catch (Exception e) {
             throw new NiceException(NAME_DECODING_FAILED);
         }
     }
